# audioreach-engine

./: CMakeLists.txt  CONTRIBUTING.md  Kconfig  LICENSE  README.md  repolint.json
app/: CMakeLists.txt  README.rst  prj.conf  sample.yaml
app/src/: main.c
ar_osal/: CMakeLists.txt
ar_osal/api/: ar_osal_error.h  ar_osal_file_io.h  ar_osal_heap.h  ar_osal_log.h  ar_osal_log_pkt_op.h  ar_osal_mem_op.h  ar_osal_mutex.h  ar_osal_servreg.h  ar_osal_shmem.h  ar_osal_signal.h  ar_osal_signal2.h  ar_osal_sleep.h  ar_osal_string.h  ar_osal_sys_id.h  ar_osal_thread.h  ar_osal_timer.h  ar_osal_types.h
ar_osal/src/linux/: ar_osal_file_io.c  ar_osal_heap.c  ar_osal_log.c  ar_osal_mem_op.c  ar_osal_mutex.c  ar_osal_signal.c  ar_osal_signal2.c  ar_osal_sleep.c  ar_osal_string.c  ar_osal_stub_log_pkt_op.c  ar_osal_thread.c  ar_osal_timer.c
ar_osal/src/linux/qcom/: ar_osal_log_pkt_op.c  ar_osal_servreg.c  ar_osal_shmem.c  ar_osal_shmem_db.c
gpr/: CMakeLists.txt
gpr/api/: ar_guids.h  ar_types.h  gpr_api.h  gpr_api_inline.h  gpr_comdef.h  gpr_ids_domains.h  gpr_msg_if.h  gpr_pack_begin.h  gpr_pack_end.h  gpr_packet.h  gpr_proc_info_api.h  ipc_dl_api.h
gpr/api/private/: gpr_private_api.h
gpr/core/inc/: gpr_api_i.h  gpr_heap_i.h  gpr_list.h  gpr_session.h
gpr/core/inc/ar_utils/audioss/: ar_msg.h
gpr/core/inc/ar_utils/generic/: ar_msg.h
gpr/core/inc/ar_utils/hexagon/: ar_msg.h
gpr/core/src/: gpr_drv.c  gpr_drv_i.h  gpr_drv_island.c  gpr_list.c  gpr_list_i.h  gpr_list_island.c  gpr_main.c  gpr_memq.c  gpr_memq.h  gpr_memq_island.c
gpr/core/src/array_based/: gpr_session.c  gpr_session_island.c
gpr/core/src/hash_based/: gpr_session.c  gpr_session_island.c
gpr/datalinks/gpr_lx/inc/: gpr_lx.h  list.h
gpr/datalinks/gpr_lx/src/: gpr_lx.c
gpr/datalinks/gpr_zephyr/inc/: gpr_zephyr.h
gpr/datalinks/gpr_zephyr/src/: gpr_zephyr_open_amp.c
gpr/ext/dynamic_allocation/inc/: gpr_dynamic_allocation.h
gpr/ext/dynamic_allocation/src/: gpr_dynamic_allocation.c
gpr/ext/dynamic_allocation/stub_src/: gpr_dynamic_allocation.c
gpr/ext/logging/inc/: gpr_log.h
gpr/ext/logging/src/: gpr_log_adsp.c  gpr_log_diag.c  gpr_log_generic.c  gpr_log_i.h
gpr/ext/logging/stub_src/: gpr_log_diag_stub.c  gpr_log_stub.c
gpr/platform/linux/: gpr_init_lx_wrapper.c
gpr/platform/zephyr/: gpr_init_zephyr_wrapper.c
modules/: CMakeLists.txt  Kconfig
modules/audio/pcm_decoder/api/: pcm_decoder_api.h
modules/audio/pcm_decoder/inc/: capi_pcm_dec.h
modules/audio/pcm_encoder/api/: pcm_encoder_api.h
modules/audio/pcm_encoder/inc/: capi_pcm_enc.h
modules/cmn/api/: imcl_spm_intent_api.h
modules/cmn/common/internal_api/: imcl_drc_info_api.h  imcl_module_gain_api.h  imcl_mute_api.h  imcl_p_eq_vol_api.h
modules/cmn/common/utils/inc/: AEEStdDef.h  AudioComdef.h  adsp_redef.h  audio_apiir_df1_opt.h  audio_basic_op.h  audio_basic_op_ext.h  audio_clips.h  audio_comdef.h  audio_common_param_calib.h  audio_complex_basic_op.h  audio_divide_qx.h  audio_dsp.h  audio_dsp32.h  audio_exp10.h  audio_fft_basic_ops.h  audio_iir_tdf2.h  audio_log10.h  audpp_common.h  audpp_converter.h  audpp_mathlib.h  audpp_util.h  basic_math.h  byte_conversion.h  crossfade.h  crossfade_api.h  crossfade_calibration_api.h  filter_design.h  legacy_map.h  simple_mm.h
modules/cmn/common/utils/src/: apiir_df1_opt.c  audio_basic_op_ext.c  audio_basic_op_ext_island.c  audio_buffer.cpp  audio_buffer32.c  audio_buffer32_island.c  audio_complex_basic_op.c  audio_delay.cpp  audio_delay32.c  audio_filter.cpp  audio_panner.cpp  basic_math.c  basic_op.c  buffer_converter.c  clips.c  convert_linear.c  converter_state.c  crossfade.c  divide_qx.c  divide_qx_island.c  exp10.c  filterDesign.c  iir_tdf2.c  log10.c  mathlib.c  simple_mm.c  util.c
modules/cmn/pcm_mf_cnv/lib/inc/: pc_converter.h
modules/cmn/pcm_mf_cnv/lib/src/: pc_converter.cpp  pc_converter_island.cpp  pc_init.cpp  pc_process.cpp  pc_process_island.cpp
modules/cmn/pcm_mf_cnv/lib/tst/: main.cpp
modules/cmn/simple_accumulator_limiter/api/: sal_api.h
modules/cmn/simple_accumulator_limiter/capi/inc/: capi_sal.h
modules/cmn/simple_accumulator_limiter/capi/src/: capi_sal.cpp  capi_sal_island.cpp  capi_sal_md_utils_island.cpp  capi_sal_port_utils.cpp  capi_sal_utils.cpp  capi_sal_utils.h
modules/examples/echo_cancellation/: CMakeLists.txt
modules/examples/echo_cancellation/api/: ecns_calibration_api.h
modules/examples/echo_cancellation/capi/inc/: capi_ecns.h
modules/examples/echo_cancellation/capi/src/: capi_ecns.c  capi_ecns_data_port_utils.c  capi_ecns_i.h  capi_ecns_metadata_utils.c  capi_ecns_utils.c
modules/examples/encoder/: CMakeLists.txt
modules/examples/encoder/api/: example_encoder_module_api.h
modules/examples/encoder/capi/inc/: capi_example_enc_module.h
modules/examples/encoder/capi/src/: capi_example_enc_module.c  capi_example_enc_module_structs.h  capi_example_enc_module_utils.c
modules/examples/encoder/lib/inc/: example_enc_lib.h
modules/examples/encoder/lib/src/: example_enc_lib.c
modules/examples/gain/: CMakeLists.txt
modules/examples/gain/api/: example_gain_module_api.h  gain_module_api.h
modules/examples/gain/capi/inc/: capi_example_gain_module.h  capi_gain_module.h
modules/examples/gain/capi/src/: capi_example_gain_module.c  capi_example_gain_module_structs.h  capi_example_gain_module_utils.c  capi_gain_module.c  capi_gain_module_structs.h  capi_gain_module_utils.c
modules/examples/gain/lib/inc/: example_gain_module_lib.h  gain_module_lib.h
modules/processing/PoplessEqualizer/api/: popless_equalizer_api.h
modules/processing/Virtualizer/api/: Virtualizer_api.h
modules/processing/Virtualizer/inc/: capi_virtualizer.h  virtualizer_calibration_api.h  virtualizer_lib_api.h
modules/processing/bassboost/api/: api_bassboost.h
modules/processing/channel_mixer/api/: chmixer_api.h  chmixer_common_api.h
modules/processing/shoebox_reverb/api/: api_reverb.h  shoebox_api.h
modules/processing/shoebox_reverb/inc/: ShoeBox_calibration_api.h  capi_shoebox.h  reverb_api.h  reverb_calibration_api.h  reverbglobal.h  shoebox_lib_api.h
(+1136 files in other folders)
